Update apiKey in index.html

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         // =========================================================================
         //  ENVIRONMENT CONFIGURATION
         // =========================================================================
-        const apiKey = ""; // Injected by the environment automatically
+        const apiKey = "AIzaSyA69v4JJoEfM-qaet541G0HjipwfTy6MwE"; // Injected by the environment automatically
 
         // --- 1. SCENE SETUP ---
         const scene = new THREE.Scene();
